fix: 1. InputView 변경 사항에 맞춰 수정 2 .사용자 입력 오류로 인한 NumberFormatException 발생 시 IllegalArgumentException으로 처리